--- a/producao/templates/producao/suporte/tipotela_form.html
+++ b/producao/templates/producao/suporte/tipotela_form.html
@@ -1,6 +1,6 @@
-<div id="identificador-tela" data-page="{{ data_page }}" data-tela="{{ data_tela }}">
+<div id="identificador-tela" data-tela="form_tipotela">
     <div class="container-fluid">
-        <h2 class="my-4">{% if object %}Editar{% else %}Cadastrar{% endif %} Tipo de Tela</h2>
+        <h2>{% if object %}Editar{% else %}Cadastrar{% endif %} Tipo de Tela</h2>
 
         <div class="card shadow-sm">
             <div class="card-body">
