--- a/producao/templates/producao/suporte/unidade_form.html
+++ b/producao/templates/producao/suporte/unidade_form.html
@@ -1,4 +1,4 @@
-<div id="identificador-tela" data-page="{{ data_page }}" data-tela="{{ data_tela }}">
+<div id="identificador-tela" data-tela="form_unidade">
     <div class="container-fluid">
         <h2 class="my-4">{% if object %}Editar{% else %}Cadastrar{% endif %} Unidade</h2>
 
