--- a/producao/templates/producao/eventos/editar_evento.html
+++ b/producao/templates/producao/eventos/editar_evento.html
@@ -1,14 +1,15 @@
-{% load static %}
-<div class="container-fluid mt-3">
-    <h2>{% if form.instance.pk %}Editar Evento de Manejo{% else %}Registrar Novo Evento de Manejo{% endif %}</h2>
-    <div class="card shadow-sm">
-        <div class="card-body">
-            <form method="post" class="form-ajax" action="">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit" class="btn btn-primary">Salvar</button>
-                <a href="{% url 'producao:lista_eventos' %}" class="btn btn-secondary ajax-link">Cancelar</a>
-            </form>
+<div id="identificador-tela" data-tela="editar_evento">
+    <div class="container-fluid mt-3">
+        <h2>{% if form.instance.pk %}Editar Evento de Manejo{% else %}Registrar Novo Evento de Manejo{% endif %}</h2>
+        <div class="card shadow-sm">
+            <div class="card-body">
+                <form method="post" class="form-ajax" action="">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" class="btn btn-primary">Salvar</button>
+                    <a href="{% url 'producao:lista_eventos' %}" class="btn btn-secondary ajax-link">Cancelar</a>
+                </form>
+            </div>
         </div>
     </div>
 </div>
