--- a/producao/templates/producao/suporte/malha_list.html
+++ b/producao/templates/producao/suporte/malha_list.html
@@ -1,23 +1,35 @@
-<div id="identificador-tela" data-page="{{ data_page }}" data-tela="{{ data_tela }}">
+<div id="identificador-tela" 
+     data-tela="lista_malhas"
+     data-entidade-singular="malha"
+     data-entidade-plural="malhas"
+     data-url-editar="{% url 'producao:editar_malha' pk=0 %}"
+     data-url-excluir="{% url 'producao:excluir_malhas_multiplos' %}"
+     data-seletor-checkbox=".selecionar-malha">
     <div class="container-fluid">
         <h2 class="my-4">Lista de Malhas</h2>
 
         <div class="card shadow-sm mb-4">
             <div class="card-header d-flex justify-content-between align-items-center">
                 <h5 class="mb-0">Malhas Cadastradas</h5>
-                <a href="{% url 'producao:cadastrar_malha' %}" class="btn btn-primary ajax-link">Nova Malha</a>
+                <div>
+                    <a href="{% url 'producao:cadastrar_malha' %}" class="btn btn-primary ajax-link">Nova Malha</a>
+                    <button id="btn-editar" class="btn btn-secondary" disabled>Editar Selecionada</button>
+                    <button id="btn-excluir" class="btn btn-danger" disabled>Excluir Selecionadas</button>
+                </div>
             </div>
             <div class="card-body">
                 <table class="table table-hover">
                     <thead>
                         <tr>
+                            <th><input type="checkbox" id="selecionar-todas-malhas"></th>
                             <th>Nome</th>
                             <th>Ações</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for malha in object_list %}
-                        <tr>
+                        <tr data-id="{{ malha.pk }}">
+                            <td><input type="checkbox" class="selecionar-malha" value="{{ malha.pk }}"></td>
                             <td>{{ malha.nome }}</td>
                             <td>
                                 <a href="{% url 'producao:editar_malha' malha.pk %}" class="btn btn-sm btn-outline-primary ajax-link">Editar</a>
@@ -25,7 +37,7 @@
                         </tr>
                         {% empty %}
                         <tr>
-                            <td colspan="2" class="text-center">Nenhuma malha cadastrada.</td>
+                            <td colspan="3" class="text-center">Nenhuma malha cadastrada.</td>
                         </tr>
                         {% endfor %}
                     </tbody>
