--- a/producao/templates/producao/suporte/unidade_list.html
+++ b/producao/templates/producao/suporte/unidade_list.html
@@ -1,36 +1,48 @@
-<div id="identificador-tela" data-page="{{ data_page }}" data-tela="{{ data_tela }}">
-    <div class="container-fluid">
-        <h2 class="my-4">Lista de Unidades</h2>
+<div id="identificador-tela" 
+     data-tela="lista_unidades"
+     data-entidade-singular="unidade"
+     data-entidade-plural="unidades"
+     data-url-editar="{% url 'producao:editar_unidade' pk=0 %}"
+     data-url-excluir="{% url 'producao:excluir_unidades_multiplos' %}"
+     data-seletor-checkbox=".selecionar-unidade"></div>
 
-        <div class="card shadow-sm mb-4">
-            <div class="card-header d-flex justify-content-between align-items-center">
-                <h5 class="mb-0">Unidades Cadastradas</h5>
+<div class="container-fluid mt-4">
+    <h2>Lista de Unidades</h2>
+
+    <div class="card shadow-sm mb-4">
+        <div class="card-header d-flex justify-content-between align-items-center">
+            <h5 class="mb-0">Unidades Cadastradas</h5>
+            <div>
                 <a href="{% url 'producao:cadastrar_unidade' %}" class="btn btn-primary ajax-link">Nova Unidade</a>
+                <button id="btn-editar" class="btn btn-secondary" disabled>Editar Selecionada</button>
+                <button id="btn-excluir" class="btn btn-danger" disabled>Excluir Selecionadas</button>
             </div>
-            <div class="card-body">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th>Nome</th>
-                            <th>Ações</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for unidade in object_list %}
-                        <tr>
-                            <td>{{ unidade.nome }}</td>
-                            <td>
-                                <a href="{% url 'producao:editar_unidade' unidade.pk %}" class="btn btn-sm btn-outline-primary ajax-link">Editar</a>
-                            </td>
-                        </tr>
-                        {% empty %}
-                        <tr>
-                            <td colspan="2" class="text-center">Nenhuma unidade cadastrada.</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+        </div>
+        <div class="card-body">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th><input type="checkbox" id="selecionar-todas-unidades"></th>
+                        <th>Nome</th>
+                        <th>Ações</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for unidade in object_list %}
+                    <tr>
+                        <td><input type="checkbox" class="selecionar-unidade" value="{{ unidade.pk }}"></td>
+                        <td>{{ unidade.nome }}</td>
+                        <td>
+                            <a href="{% url 'producao:editar_unidade' unidade.pk %}" class="btn btn-sm btn-outline-primary ajax-link">Editar</a>
+                        </td>
+                    </tr>
+                    {% empty %}
+                    <tr>
+                        <td colspan="3" class="text-center">Nenhuma unidade cadastrada.</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
