--- a/producao/templates/producao/tanques/importar_tanques.html
+++ b/producao/templates/producao/tanques/importar_tanques.html
@@ -1,22 +1,19 @@
-{% extends 'base.html' %}
-{% load static %}
+<div id="identificador-tela" data-tela="importar_tanques">
+    <div class="container-fluid">
+        <h2 class="my-4">Importar Tanques de Planilha Excel</h2>
 
-{% block content %}
-<div class="container-fluid">
-    <h2 class="my-4">Importar Tanques de Planilha Excel</h2>
-
-    <div class="card shadow-sm">
-        <div class="card-body">
-            <p>Selecione um arquivo Excel (.xlsx) para importar múltiplos tanques. Certifique-se de que a planilha segue o modelo padrão.</p>
-            <p><a href="{% url 'producao:download_template_tanque' %}" class="btn btn-info">Baixar Modelo da Planilha</a></p>
-            
-            <form method="post" enctype="multipart/form-data" action="{% url 'producao:importar_tanques' %}" class="ajax-form">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit" class="btn btn-success">Importar</button>
-                <a href="{% url 'producao:lista_tanques' %}" class="btn btn-secondary ajax-link">Cancelar</a>
-            </form>
+        <div class="card shadow-sm">
+            <div class="card-body">
+                <p>Selecione um arquivo Excel (.xlsx) para importar múltiplos tanques. Certifique-se de que a planilha segue o modelo padrão.</p>
+                <p><a href="{% url 'producao:download_template_tanque' %}" class="btn btn-info">Baixar Modelo da Planilha</a></p>
+                
+                <form method="post" enctype="multipart/form-data" action="{% url 'producao:importar_tanques' %}" class="ajax-form">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" class="btn btn-success">Importar</button>
+                    <a href="{% url 'producao:lista_tanques' %}" class="btn btn-secondary ajax-link">Cancelar</a>
+                </form>
+            </div>
         </div>
     </div>
 </div>
-{% endblock %}
