--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
   <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
   <link rel="stylesheet" href="{% static 'layout_switcher/css/switcher.css' %}">
 </head>
-<body id="page-body" class="layout_navbar">
+<body class="{% if request.user.is_authenticated %}logged-in{% endif %}" id="page-body" data-login-url="{% url 'accounts:login' %}">
   <script>window.pageInitializers = {};</script> <!-- ✅ Garante que o objeto global exista -->
   
   <div id="navbar-container"></div>
