--- a/templates/partials/accounts/lista_grupos.html
+++ b/templates/partials/accounts/lista_grupos.html
@@ -20,7 +20,7 @@
         <h2 class="h4 mb-4">Gerenciamento de Grupos</h2>
 
         <div class="card shadow-sm">
-          <div class="card-header bg-light py-3 d-flex justify-content-between align-items-center">
+          <div class="card-header py-3 d-flex justify-content-between align-items-center">
             <a href="{% url 'accounts:cadastrar_grupo' %}" class="btn btn-primary ajax-link">
                 <i class="bi bi-plus-lg me-1"></i> Novo Grupo
             </a>
