--- a/producao/templates/producao/curvas/gerenciar_curvas.html
+++ b/producao/templates/producao/curvas/gerenciar_curvas.html
@@ -26,7 +26,7 @@
               aria-label="Lista de curvas (clique para carregar)">
             {% for curva in curvas %}
               <li class="list-group-item list-group-item-action d-flex align-items-center justify-content-between"
-                  data-id="{{ curva.pk }}" data-name="{{ curva.nome }}" role="option" tabindex="0"
+                  data-id="{{ curva.pk }}"
                   style="cursor:pointer">
                 <span class="texto-truncado">{{ curva.nome }}</span>
                 <i class="fas fa-chevron-right small text-muted"></i>
@@ -74,7 +74,7 @@
             <!-- Aba: Cadastro de Curva (cabeçalho) -->
             <div class="tab-pane fade show active" id="cadastro" role="tabpanel" aria-labelledby="cadastro-tab">
               <form id="form-curva" class="ajax-form needs-validation" novalidate
-                    data-api-url="" data-method="POST" autocomplete="off">
+                    data-api-url="" data-method="POST" autocomplete="off" data-skip-global="1">
                 {% csrf_token %}
                 <input type="hidden" id="curva-id" name="id" value="">
                 <div class="row">
