--- a/producao/templates/producao/suporte/faseproducao_list.html
+++ b/producao/templates/producao/suporte/faseproducao_list.html
@@ -4,7 +4,8 @@
      data-entidade-plural="fases de produção"
      data-url-editar="{% url 'producao:editar_faseproducao' 0 %}"
      data-url-excluir="{% url 'producao:excluir_faseproducao_multiplo' %}"
-     data-seletor-checkbox=".check-faseproducao"></div>
+     data-seletor-checkbox=".check-faseproducao"
+     data-seletor-pai="#select-all-faseproducao"></div>
 
 <div class="container-fluid mt-4">
     <h2>Fases de Produção</h2>
