--- a/producao/templates/producao/suporte/linhaproducao_list.html
+++ b/producao/templates/producao/suporte/linhaproducao_list.html
@@ -4,7 +4,8 @@
      data-entidade-plural="linhas de produção"
      data-url-editar="{% url 'producao:editar_linhaproducao' 0 %}"
      data-url-excluir="{% url 'producao:excluir_linhaproducao_multiplo' %}"
-     data-seletor-checkbox=".check-linhaproducao"></div>
+     data-seletor-checkbox=".check-linhaproducao"
+     data-seletor-pai="#select-all-linhaproducao"></div>
 
 <div class="container-fluid mt-4">
     <h2>Linhas de Produção</h2>
