--- a/producao/templates/producao/suporte/tipotanque_list.html
+++ b/producao/templates/producao/suporte/tipotanque_list.html
@@ -4,7 +4,8 @@
      data-entidade-plural="tipos de tanque"
      data-url-editar="{% url 'producao:editar_tipotanque' 0 %}"
      data-url-excluir="{% url 'producao:excluir_tipotanque_multiplo' %}"
-     data-seletor-checkbox=".check-tipotanque"></div>
+     data-seletor-checkbox=".check-tipotanque"
+     data-seletor-pai="#select-all-tipotanque"></div>
 
 <div class="container-fluid mt-4">
     <h2>Tipos de Tanque</h2>
