--- a/templates/partials/nova_empresa/lista_categorias.html
+++ b/templates/partials/nova_empresa/lista_categorias.html
@@ -6,7 +6,8 @@
      data-entidade-plural="categorias" 
      data-url-editar="{% url 'empresas:editar_categoria' 0 %}"
      data-url-excluir="{% url 'empresas:excluir_categorias_multiplos' %}" 
-     data-seletor-checkbox=".check-categoria">
+     data-seletor-checkbox=".check-categoria"
+     data-seletor-pai="#select-all-categorias">
 </div>
 
 <div class="card shadow-sm mx-auto" style="max-width: 800px;">
