--- a/templates/partials/nova_empresa/lista_empresas.html
+++ b/templates/partials/nova_empresa/lista_empresas.html
@@ -10,7 +10,8 @@
      data-entidade-plural="empresas" 
      data-url-editar="{% url 'empresas:editar_empresa_avancada' 0 %}" 
      data-url-excluir="{% url 'empresas:excluir_empresas_avancadas_multiplos' %}" 
-     data-seletor-checkbox=".check-empresa">
+     data-seletor-checkbox=".check-empresa"
+     data-seletor-pai="#select-all-empresas">
 </div>
 
 <!-- ✅ Cartão com sombra e largura máxima controlada -->
