--- a/templates/partials/produtos/lista_categorias.html
+++ b/templates/partials/produtos/lista_categorias.html
@@ -8,7 +8,8 @@
      data-entidade-plural="categorias"
      data-url-editar="{% url 'produto:editar_categoria' 0 %}"
      data-url-excluir="{% url 'produto:excluir_categorias' %}"
-     data-seletor-checkbox=".check-categoria">
+     data-seletor-checkbox=".check-categoria"
+     data-seletor-pai="#select-all-categorias">     
 </div>
 <div class="card shadow-sm">
   <div class="card-body">
