--- a/templates/partials/produtos/lista_produtos.html
+++ b/templates/partials/produtos/lista_produtos.html
@@ -13,7 +13,8 @@
      data-entidade-plural="produtos"
      data-url-editar="{% url 'produto:editar_produto' 0 %}"
      data-url-excluir="{% url 'produto:excluir_produto_multiplo' %}"
-     data-seletor-checkbox=".check-produto"></div>
+     data-seletor-checkbox=".check-produto"
+     data-seletor-pai="#select-all-produtos"></div>
 
 <!-- 🎴 Cartão visual padrão do sistema -->
 <div class="card shadow-sm">
