--- a/templates/partials/produtos/lista_unidades.html
+++ b/templates/partials/produtos/lista_unidades.html
@@ -8,7 +8,8 @@
        data-entidade-plural="unidades"
        data-url-editar="{% url 'produto:editar_unidade' 0 %}"
        data-url-excluir="{% url 'produto:excluir_unidades' %}"
-       data-seletor-checkbox=".check-unidade">
+       data-seletor-checkbox=".check-unidade"
+       data-seletor-pai="#select-all-unidades">
 
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h2 class="mb-0">Unidades de Medida</h2>
