--- a/producao/templates/producao/curvas/lista_curvas.html
+++ b/producao/templates/producao/curvas/lista_curvas.html
@@ -4,7 +4,8 @@
      data-entidade-plural="curvas de crescimento"
      data-url-editar="{% url 'producao:editar_curva' pk=0 %}"
      data-url-excluir="{% url 'producao:excluir_curvas_multiplas' %}"
-     data-seletor-checkbox=".selecionar-curva">
+     data-seletor-checkbox=".check-curva"
+     data-seletor-pai="#select-all-curvas"></div>
 
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h2 class="mb-0">Curvas de Crescimento</h2>
@@ -23,7 +24,7 @@
           <table class="table table-hover table-striped">
             <thead>
               <tr>
-                <th><input type="checkbox" id="selecionar-todas-curvas"></th>
+                <th><input type="checkbox" id="select-all-curvas"></th>
                 <th>Nome da Curva</th>
                 <th>Espécie</th>
                 <th>% Rendimento</th>
@@ -33,7 +34,7 @@
             <tbody>
               {% for curva in curvas %}
               <tr data-id="{{ curva.pk }}">
-                <td><input type="checkbox" class="selecionar-curva" value="{{ curva.pk }}"></td>
+                <td><input type="checkbox" class="check-curva" value="{{ curva.pk }}"></td>
                 <td><a href="{% url 'producao:detalhe_curva' pk=curva.pk %}" class="ajax-link">{{ curva.nome }}</a></td>
                 <td>{{ curva.especie }}</td>
                 <td>{{ curva.rendimento_perc }}%</td>
